--- a/client/src/app/settings/settings.page.html
+++ b/client/src/app/settings/settings.page.html
@@ -20,9 +20,9 @@
                 <h3>{{'View profile' | translate}}</h3>
             </div>
         </div>
-        <ion-button fill="clear" (click)="openAccountSwitchOptions()">
+        <!--<ion-button fill="clear" (click)="openAccountSwitchOptions()">
             <ion-icon name="ellipsis-vertical-circle-outline"></ion-icon>
-        </ion-button>
+        </ion-button>-->
     </div>
 
     <!-- <div class="get_pro d-flex" (click)="get_pro()">
