fix progress photo refresh && wake lock [ci]

--- a/client/src/app/my-activity/my-activity.page.html
+++ b/client/src/app/my-activity/my-activity.page.html
@@ -169,7 +169,7 @@
     <ng-template>
         <ion-list>
             <ion-item button (click)="progressPhoto()">
-                <ion-label>{{ 'Progress photo' | translate }}</ion-label>
+                <ion-label>{{ 'Photo' | translate }}</ion-label>
                 <ion-icon [src]="cameraIcon" color="primary"></ion-icon>
             </ion-item>
             @for (measure of measurements; track measure.id) {
