fix deleting active program [ci]

--- a/client/src/app/shared/no-data/no-data.component.html
+++ b/client/src/app/shared/no-data/no-data.component.html
@@ -1,6 +1,6 @@
 <div class="no-data-container">
     <!-- <ion-icon name="file-tray-outline" size="large" color="medium" aria-hidden="true"></ion-icon> -->
     <div class="no-data-text ion-text-center ion-color-medium">
-        {{ text ?? ('no_data' | translate) }}
+        {{ text ?? ('No data yet.' | translate) }}
     </div>
 </div>
