--- a/client/src/app/home/home.page.html
+++ b/client/src/app/home/home.page.html
@@ -114,7 +114,8 @@
                                     <ion-badge class="active-badge" color="success">{{ 'Completed' |translate
                                         }}</ion-badge> }
                                     @if (activeProgramIds.includes(program.id)) {
-                                    <ion-badge id="active-animation" class="active-badge" color="primary">{{ 'Active' |translate
+                                    <ion-badge id="active-animation" class="active-badge" color="primary">{{ 'Active'
+                                        |translate
                                         }}</ion-badge> }
                                     @if (program.aiProgram) {
                                     <ion-badge class="active-badge" color="tertiary">{{ 'AI Program' |translate
@@ -150,17 +151,20 @@
                             }
                         </ion-label>
                     </ion-item>
-                    <!-- <ion-item-options side="start">
+                    
+                    <!--<ion-item-options side="start">
                         <ion-item-option color="primary" (click)="presentAssignProgramPopover(program)">
                             <ion-icon slot="icon-only" name="person-add"></ion-icon>
                         </ion-item-option>
-                    </ion-item-options> -->
+                    </ion-item-options>-->
 
+                    @if (!activeProgramIds.includes(program.id)) {
                     <ion-item-options side="end">
                         <ion-item-option color="danger" (click)="deleteProgram(program.id)">
                             <ion-icon slot="icon-only" name="trash"></ion-icon>
                         </ion-item-option>
                     </ion-item-options>
+                    }
                 </ion-item-sliding>
                 } @empty {
                 <app-no-data [text]="'No programs yet.' | translate"></app-no-data>
